# univoice-rs

./: .editorconfig  .env.example  .gitattributes  .gitignore  .npmrc  .release-it.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  biome.json  cspell.json  design-minimax-tts.md  design-qwen-realtime-tts.md  lefthook.yml  lint-staged.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml  tarpaulin.toml  tsconfig.json  tsup.config.ts  typos.toml  vitest.config.ts
.agents/: settings.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  doc_issue.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
.husky/: pre-commit
benchmark/: README.md  analyze.ts  index.ts  run.ts  sync-readme.ts
benchmark/fixtures/: audios.ts  texts.ts
benchmark/metrics/: accuracy.ts  collector.ts  types.ts
benchmark/runners/: asr-runner.ts  tts-runner.ts
benchmark/scenarios/: audio-format.ts  doubao-matrix.ts  glm-matrix.ts  mimo-matrix.ts  minimax-matrix.ts  qwen-matrix.ts  stream-input.ts  text-length.ts  xfyun-matrix.ts
benchmark/utils/: aggregator.ts  matrix-loader.ts  mock-generator.ts  report-generator.ts  result-loader.ts  result-manager.ts  result-writer.ts
docs/: design-benchmark-rust-phase1.md  design-benchmark-rust-phase2.md  openmanual.json  package.json
docs/content/: audio-format-performance.mdx  benchmark.mdx  concepts.mdx  index.mdx  quickstart.mdx
docs/tmp/: WebSocket 单向流式-V1.md  WebSocket 单向流式-V3.md  WebSocket 双向流式-V3.md  audio-format-performance.mdx  index.mdx  quickstart.mdx
examples/: .npmignore  README.md  asr_doubao_connect.rs  asr_doubao_non_stream.rs  asr_doubao_ogg_opus.rs  asr_doubao_stream.rs  asr_doubao_vad.rs  asr_glm_stream.rs  asr_mimo_non_stream.rs  asr_mimo_stream.rs  asr_qwen_connect.rs  asr_qwen_stream.rs  asr_xfyun_stream.rs  list_voices.rs  package.json  tts_cosyvoice_stream.rs  tts_cosyvoice_synthesize.rs  tts_doubao_stream.rs  tts_doubao_synthesize.rs  tts_gemini_stream.rs  tts_gemini_synthesize.rs  tts_glm_stream.rs  tts_glm_synthesize.rs  tts_mimo_stream.rs  tts_mimo_synthesize.rs  tts_minimax_stream.rs  tts_minimax_synthesize.rs  tts_openai_stream.rs  tts_openai_synthesize.rs  tts_qwen3_tts_stream.rs  tts_qwen3_tts_synthesize.rs  tts_qwen_realtime_stream.rs  tts_qwen_realtime_synthesize.rs  tts_qwen_stream.rs  tts_qwen_synthesize.rs  tts_xfyun_stream.rs  tts_xfyun_synthesize.rs
examples/audio/: ogg-to-opus-packets.ts  opus-packets-to-ogg.ts
examples/utils/: common.ts  ogg-muxer-stream.ts  ogg-to-opus-packets.ts  opus-packets-to-ogg.ts  pcm-directory-to-stream.ts
src/: cli.rs  datetime.rs  index.ts  lib.rs  logging.rs  main.rs
src/asr/: base.ts  error.rs  factory.ts  index.ts  mod.rs  registry.rs  traits.rs  types.rs
src/benchmark/: accuracy.rs  aggregator.rs  asr.rs  cli.rs  collector.rs  fixtures.rs  mod.rs  (+6 more)
tests/: asr_qwen.rs  integration_test.rs  tts_glm.rs  tts_mimo.rs
(+850 files in other folders)
